# SmallCLI

./: .env copy  .gitignore  class1.py  class1_bert.py  llm1.py  orchestrator.py  orchestrator_langgraph.py  pyproject.toml  readme.md  schema.py  server.py  slm1.py  slm1_online_llm.py  slm2.py  slm3.py  story.txt  test.http  util.py
cli-frontend/: index.js  package-lock.json  package.json  story.txt
data/: dataset_info.json
data_gen/: README.md  client.py  gen_debugger.py  gen_executor.py  gen_planner.py  gen_seed_tasks.py  run_all.py  templates.py  util_local.py
docs/: LEAP.md  应用场景及定位分析.md  技术路线与实施计划.md  训练服务器操作手册.md
models/: llm1.py  llm1_online.py  slm2.py  slm3.py
scripts/: setup_local.sh  setup_server.sh
train/: README.md  debugger.yaml  executor.yaml  planner.yaml
